--- a/html-css/buttons.html
+++ b/html-css/buttons.html
@@ -1,5 +1,5 @@
 <style>
-    button{
+    .subscribe-button{
         background-color: rgb(200,0,0);
         color: white;
         border: none;
@@ -7,6 +7,28 @@
         width: 110px;
         border-radius: 2px;
         cursor: pointer;
+        margin: 8px;
     }
+
+    .join-button{
+        background-color: rgb(255,255,255);
+        border-color: rgb(41,118,211);
+        border-style: solid;
+        border-width: 1px;
+        color: rgb(41,118,211);
+        height: 35px;
+        width: 62px;
+        border-radius: 2px;
+        cursor: pointer;
+
+    }
+
 </style>
-<button>SUBSCRIBE</button>
+
+<button class="subscribe-button" >
+    SUBSCRIBE
+</button>
+
+<button class="join-button">
+    JOIN
+</button>
