Tweet button added

--- a/html-css/buttons.html
+++ b/html-css/buttons.html
@@ -20,7 +20,18 @@
         width: 62px;
         border-radius: 2px;
         cursor: pointer;
-
+    }
+    .tweet-button{
+        background-color: rgb(2,158,255);
+        color: white;
+        height: 36px;
+        width: 74px;
+        border: none;
+        margin-left: 8px;
+        border-radius: 18px;
+        font-weight: bold;
+        font-size: 15px;
+        cursor: pointer;
     }
 
 </style>
@@ -32,3 +43,8 @@
 <button class="join-button">
     JOIN
 </button>
+
+<button class="tweet-button" >
+    Tweet
+</button>
+
