--- a/html-css/buttons.html
+++ b/html-css/buttons.html
@@ -1,14 +1,17 @@
 <style>
     .subscribe-button{
+        vertical-align: top;
         background-color: rgb(200,0,0);
         color: white;
         border: none;
-        height: 35px;
-        width: 110px;
         border-radius: 2px;
         cursor: pointer;
         margin: 8px;
         transition: opacity 0.15s;
+        padding-left: 16px;
+        padding-right: 16px;
+        padding-top: 10px;
+        padding-bottom: 10px;
     }
     .subscribe-button:hover{
         opacity: 0.8;
@@ -18,17 +21,24 @@
     }
 
     .join-button{
+        vertical-align: top;
         background-color: rgb(255,255,255);
         border-color: rgb(41,118,211);
         border-style: solid;
         border-width: 1px;
         color: rgb(41,118,211);
+        margin: 8px;
         height: 35px;
         width: 62px;
         border-radius: 2px;
         cursor: pointer;
         transition: background-color 0.15s,
             color 0.15s;
+        padding-left: 16px;
+        padding-right: 16px;
+        padding-top: 9px;
+        padding-bottom: 9px;
+
     }
     .join-button:hover{
         background-color: rgb(41,118,211);
@@ -39,17 +49,23 @@
     }
 
     .tweet-button{
+        vertical-align: top;
         background-color: rgb(2,158,255);
         color: white;
         height: 36px;
         width: 74px;
         border: none;
-        margin-left: 8px;
+        margin: 8px;
         border-radius: 18px;
         font-weight: bold;
         font-size: 15px;
         cursor: pointer;
         transition: box-shadow 0.15s;
+        padding-left: 16px;
+        padding-right: 16px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+
     }
         
     .tweet-button:hover{
