banner and shop link added

--- a/html-css/text.html
+++ b/html-css/text.html
@@ -27,7 +27,24 @@
         line-height: 20px;
         font-weight: 400;
         width: 284px;
+        margin-bottom: 60px;
 
+    }
+    .apple-banner{
+        text-align: center;
+        background-color: rgb(227, 65, 64);
+        color: rgb(255,255,255);
+        padding-top: 16px;
+        padding-bottom: 16px;
+    }
+    .shop-link{
+        cursor: pointer;
+        font-size: 14px;
+    }
+    .shop-link:hover{
+        text-decoration: underline;
+    }
+        
     }
 </style>
 <p class="video-title" >
@@ -43,4 +60,7 @@
     Talking tech and AI on the heels of Google I/O.
     Also a daily driver phone reveal from 
     Google's CEO. Shoutout to Sunder!
+</p>
+<p class="apple-banner" >
+Shop early for the best selection of holiday favourites. <span class="shop-link" >Shop now &#62;</span>
 </p>
