--- a/html-css/index.html
+++ b/html-css/index.html
@@ -1,3 +1,14 @@
-<button>Hello</button>
-<p>paragraph of text</p>
-<a href="https://www.youtube.com" target="_blank" >Youtube</a>
+<!DOCTYPE html>
+<html>
+    <head></head>
+    <body>
+        <button>Hello</button>
+        <p>paragraph of text</p>
+        <a href="https://www.youtube.com" target="_blank" >Youtube</a>
+    </body>
+</html>
+
+
+
+
+
