--- a/html-css/text.html
+++ b/html-css/text.html
@@ -1,66 +1,32 @@
-<style>
-    p{
-        font-family: arial;
-        margin-top: 0px;
-        margin-bottom: 0px;
-    }
-    .video-title{
-        font-size: 18px;
-        font-weight: bold;
-        width: 310px;
-        line-height: 24px;
-        margin-bottom: 2px;
-    }
-    .video-stats{
-        color: rgb(96, 96, 96);
-        margin-bottom: 16px;
-    }
-    .channel-name{
-        font-size: 14px;
-        color: rgb(96,96,96);
-        margin-bottom: 16px;
-    }
-    .video-description{
-        font-family: arial;
-        font-size: 14px;
-        color: rgb(96,96,96);
-        line-height: 20px;
-        font-weight: 400;
-        width: 284px;
-        margin-bottom: 60px;
+<!DOCTYPE html>
 
-    }
-    .apple-banner{
-        text-align: center;
-        background-color: rgb(227, 65, 64);
-        color: rgb(255,255,255);
-        padding-top: 16px;
-        padding-bottom: 16px;
-    }
-    .shop-link{
-        cursor: pointer;
-        font-size: 14px;
-    }
-    .shop-link:hover{
-        text-decoration: underline;
-    }
-        
-    }
-</style>
-<p class="video-title" >
-    Talking Tech and AI with Google CEO Sundar Pichai!
-</p>
-<p class="video-stats" >
-    3.4M views &#183; 6 months ago
-</p>
-<p class="channel-name" >
-    Marques Brownlee &#10003; 
-</p>
-<p class="video-description">
-    Talking tech and AI on the heels of Google I/O.
-    Also a daily driver phone reveal from 
-    Google's CEO. Shoutout to Sunder!
-</p>
-<p class="apple-banner" >
-Shop early for the best selection of holiday favourites. <span class="shop-link" >Shop now &#62;</span>
-</p>
+<head>
+    <title>Text Practice</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="Styles/text.css">
+</head>
+
+<body>
+    <p class="video-title">
+        Talking Tech and AI with Google CEO Sundar Pichai!
+    </p>
+    <p class="video-stats">
+        3.4M views &#183; 6 months ago
+    </p>
+    <p class="channel-name">
+        Marques Brownlee &#10003;
+    </p>
+    <p class="video-description">
+        Talking tech and AI on the heels of Google I/O.
+        Also a daily driver phone reveal from
+        Google's CEO. Shoutout to Sunder!
+    </p>
+    <p class="apple-banner">
+        Shop early for the best selection of holiday favourites. <span class="shop-link">Shop now &#62;</span>
+    </p>
+
+</body>
